--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-    <meta name="theme-color" content="#f3f4f6" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Commander Tracker" />
+    <meta name="theme-color" content="#111827" />
     <title>Commander Tracker</title>
     <meta name="description" content="Mobile-first Magic: The Gathering Commander game timer and life tracker" />
   </head>
